Fixing styling on mobile

--- a/src/app/plants/[slug]/page.module.scss
+++ b/src/app/plants/[slug]/page.module.scss
@@ -20,7 +20,7 @@
  .contentWrapper {
     display: flex;
     flex-direction: row;
-    gap: 40px;
+    //gap: 40px;
 
      @media screen and (max-width: 1024px) {
         flex-direction: column;
@@ -38,14 +38,19 @@
     width: 50%;
     min-width: 0;
     background-color: #fff;
-    border-radius: 16px;
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
     box-shadow: 0 6px 16px -2px rgba(38,42,130,.12), 0 0 0 5px rgba(0,0,0,0);
     position: relative;
     z-index: 9;
     transition: box-shadow .18s ease, border-color .18s ease;
 
-    @media screen and (max-width: 768px) {
-        padding: clamp(16px, 3vw, 32px);
+    @media screen and (max-width: 1024px) {
+       width: 100%;
+       border-top-left-radius: 16px;
+       border-top-right-radius: 16px;
+       border-bottom-left-radius: 0;
+       border-bottom-right-radius: 0;
     }
 
      @media screen and (max-width: 1024px) {
@@ -66,5 +71,26 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+    }
+}
+
+.imageWrapper {
+    width: 50%;
+     @media screen and (max-width: 1024px) {
+       width: 100%;
+    }
+
+    img {
+        width: 100%;
+        height: 100%;
+        border-top-right-radius: 16px;
+        border-bottom-right-radius: 16px;
+
+        @media screen and (max-width: 1024px) {
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+            border-bottom-left-radius: 16px;
+            border-bottom-right-radius: 16px;
+        }
     }
 }
